fix css overflow problem for firefox

--- a/source/css/_common/components/highlight/highlight.styl
+++ b/source/css/_common/components/highlight/highlight.styl
@@ -4,7 +4,8 @@
 
 // Placeholder: $code-block
 $code-block {
-  overflow: auto;
+  overflow-x: auto;
+  overflow-y: hidden;
   margin: 20px 0;
   padding: 8px 12px;
   font-size: $code-font-size;
