--- a/source/css/_common/components/post/post.styl
+++ b/source/css/_common/components/post/post.styl
@@ -22,6 +22,24 @@
   line-height: 1;
 }
 
+@media (min-width: 768px) {
+  .post-body .image-full {
+    width: 100%;
+  }
+
+  .post-body .image-lg {
+    width: 75%;
+  }
+
+  .post-body .image-md {
+    width: 50%;
+  }
+
+  .post-body .image-sm {
+    width: 25%;
+  }
+}
+
 .post-body .figure .caption {
   @extend .post-body .image-caption;
 }
